--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,23 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.3'
 }
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "io.realm:realm-gradle-plugin:0.88.0"
+    }
+}
+
+apply plugin: 'realm-android'
