--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.3'
+    compile 'joda-time:joda-time:2.9.2'
 }
 
 buildscript {
