--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 26
+    buildToolsVersion '26.0.1'
 
     defaultConfig {
         applicationId "com.gintechsystems.gincose"
         minSdkVersion 21
-        targetSdkVersion 23
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -19,24 +20,22 @@ android {
     }
 }
 
-repositories {
-    maven { url "https://jitpack.io" }
-}
-
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.github.PhilJay:MPAndroidChart:v2.2.3'
-    compile 'joda-time:joda-time:2.9.2'
-}
-
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
-        classpath "io.realm:realm-gradle-plugin:0.88.0"
+        classpath "io.realm:realm-gradle-plugin:3.5.0"
     }
 }
 
-apply plugin: 'realm-android'
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'joda-time:joda-time:2.9.9'
+}
